# hecate

./: .gitignore  Cargo.toml  README.md  build-glibc.sh  build-musl.sh  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
client/: Cargo.toml  build.rs
client/.cargo/: config.toml
client/src/: archive.rs  commands.rs  lib.rs  main.rs  online.rs  shamir.rs  streaming_upload.rs  tls_verifiers.rs  websocket_client.rs
client/tests/: end_to_end_tests.rs  protocol_tests.rs
server/: Cargo.toml  README.md  hecate-server.service  mercury.toml
server/migrations/: 20250110_init.sql
server/src/: args.rs  auth.rs  config.rs  health.rs  http_api.rs  lib.rs  main.rs  protocol.rs  resumable_upload.rs  storage.rs  users.rs  websocket_server.rs
server/tests/: integration_tests.rs
src/: archive.rs  commands.rs  config.rs  crypto.rs  lib.rs  main.rs  online.rs  protocol.rs  qr.rs  shamir.rs  streaming_upload.rs  websocket_client.rs
tests/: end_to_end_tests.rs  protocol_tests.rs  security_tests.rs
