[package]
name = "hecate"
version = "0.1.0"
edition = "2024"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
description = "Secure file archiving with XChaCha20-Poly1305 encryption and Shamir secret sharing"
license = "ISC"

[lib]
name = "hecate"
path = "src/lib.rs"

[[bin]]
name = "hecate"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
libsodium-rs = "0.1.1"
tar = "0.4.44"
zstd = "0.13.3"
qrcode = "0.14.1"
image = "0.25.6"
shamir = "2.0.0"
anyhow = "1.0.99"
chrono = "0.4.41"
hex = "0.4.3"
base64 = "0.22.1"
thiserror = "2.0.16"
bip39 = "2.2.0"
rqrr = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
rustls = { version = "0.23", features = ["aws_lc_rs", "ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
futures-util = "0.3"
zeroize = { version = "1.8", features = ["derive"] }
tempfile = "3.21.0"
ring = "0.17"
tracing = "0.1"
walkdir = "2.5.0"
sha2 = "0.10"

[dev-dependencies]
libc = "0.2"
