[workspace]
members = ["client", "server"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
license = "ISC"
repository = "https://github.com/dspearson/hecate"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }