[package]
name = "hecate-server"
version = "0.1.0"
edition = "2021"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
description = "Storage server for Hecate encrypted archives with list and retrieval support"
license = "ISC"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
tungstenite = { version = "0.24", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "log", "logging", "std", "tls12"] }
rustls-pemfile = "2.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.21"
toml = "0.9.5"
argon2 = "0.5.3"
axum = "0.8.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }
async-trait = "0.1"
sha2 = "0.10"
rand = "0.8"
